--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -8,7 +8,7 @@
 	background-position: 100% 30%;
 	background-size: 150px 150px ;
 	height: 150px;
-	width: 255px;
+	width: 415px;
 	padding: 10px;
 	padding-right: 150px;
 	font-family: $header-font-family;
